# default-logging-config

./: .gitignore  00_one_file.py  01_import_logger.py  README.md  logger.py  pyproject.toml
